force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release__c/agf__ADM_Release__c.object-meta.xml
<CustomObject>
    <label>Release</label>
    <nameField>
        <label>Release Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Releases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>