force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release__c/fields/agf__Application__c.field-meta.xml
<CustomField>
    <fullName>agf__Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>agf__ADM_Application__c</referenceTo>
    <relationshipLabel>Releases</relationshipLabel>
    <relationshipName>Releases</relationshipName>
    <type>Lookup</type>
</CustomField>