force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release__c/fields/agf__Created_On_import__c.field-meta.xml
<CustomField>
    <fullName>agf__Created_On_import__c</fullName>
    <description>Data/time imported from the original release from bugforce.</description>
    <label>Created On (import)</label>
    <type>DateTime</type>
</CustomField>