force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release__c/fields/agf__Customer_Facing_Release_Name__c.field-meta.xml
<CustomField>
    <fullName>agf__Customer_Facing_Release_Name__c</fullName>
    <description>The name communicated to customers when referencing this release.</description>
    <inlineHelpText>(Optional) Enter the name communicated to customers for this release. This name may appear in the customer-facing 12-month TRUST calendar.</inlineHelpText>
    <label>Customer Facing Release Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>