force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release__c/fields/agf__Deployment_Delayed_minutes__c.field-meta.xml
<CustomField>
    <fullName>agf__Deployment_Delayed_minutes__c</fullName>
    <formula>IF(ISNULL(agf__Release_Date__c),( (agf__Actual_Release_Date__c  -  agf__Planned_GUS_Release_Date__c )* 24 * 60), (agf__Actual_Release_Date__c - agf__Release_Date__c) * 24 * 60)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deployment Delayed (minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>