force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release__c/fields/agf__Duplicate_Validator__c.field-meta.xml
<CustomField>
    <fullName>agf__Duplicate_Validator__c</fullName>
    <label>Duplicate Validator</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>