force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release__c/fields/agf__Number_of_Stamps__c.field-meta.xml
<CustomField>
    <fullName>agf__Number_of_Stamps__c</fullName>
    <label>Number of Stamps</label>
    <summaryForeignKey>agf__ADM_Released_In__c.agf__Release__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>