force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release__c/fields/agf__Planned_Duration__c.field-meta.xml
<CustomField>
    <fullName>agf__Planned_Duration__c</fullName>
    <defaultValue>60</defaultValue>
    <description>Planned duration of deployment in minutes.</description>
    <inlineHelpText>Planned duration of deployment in minutes. If &quot;Scheduled End Date&quot; is specified, this value will be calculated on Save.</inlineHelpText>
    <label>Planned Duration</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>