force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release__c/fields/agf__Planned_GS0_Duration__c.field-meta.xml
<CustomField>
    <fullName>agf__Planned_GS0_Duration__c</fullName>
    <description>Planned duration of GS0 deployment in minutes.</description>
    <inlineHelpText>Planned duration of GS0 deployment in minutes. If &quot;Planned GS0 End Date&quot; is specified, this value will be calculated on Save.</inlineHelpText>
    <label>Planned Release Duration To Pilot Org</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>