force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release__c/fields/agf__Planned_GS0_End_Date__c.field-meta.xml
<CustomField>
    <fullName>agf__Planned_GS0_End_Date__c</fullName>
    <inlineHelpText>Enter the date/time for the expected completion of the GS0 deployment. If specified, the &quot;Planned GS0 Duration&quot; field will be calculated on Save.</inlineHelpText>
    <label>Scheduled Release End Date To Pilot Org</label>
    <type>DateTime</type>
</CustomField>