force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release__c/fields/agf__Planned_GUS_Release_Date__c.field-meta.xml
<CustomField>
    <fullName>agf__Planned_GUS_Release_Date__c</fullName>
    <description>Date and time that this release is deployed to GS0.</description>
    <inlineHelpText>Please specify if this release is deployed to GS0 separately.</inlineHelpText>
    <label>Scheduled Release Date To Pilot Org</label>
    <type>DateTime</type>
</CustomField>