force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release__c/fields/agf__Planned_Unplanned__c.field-meta.xml
<CustomField>
    <fullName>agf__Planned_Unplanned__c</fullName>
    <label>Planned / Unplanned</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>agf__Release_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Planned</fullName>
            </value>
            <value>
                <fullName>Unplanned</fullName>
                <default>true</default>
                <label>Unplanned</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>