force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release__c/fields/agf__Release_Date__c.field-meta.xml
<CustomField>
    <fullName>agf__Release_Date__c</fullName>
    <label>Scheduled Release Date</label>
    <type>DateTime</type>
</CustomField>