force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release__c/fields/agf__Release_Delay_Category__c.field-meta.xml
<CustomField>
    <fullName>agf__Release_Delay_Category__c</fullName>
    <formula>IF(agf__Deployment_Delayed_minutes__c  &lt;= 30, &quot;On-time Release&quot;, 
IF(agf__Deployment_Delayed_minutes__c  &lt;= 120, &quot;Delay of Less than 2 Hours&quot;, 
IF(agf__Deployment_Delayed_minutes__c &gt; 120, &quot;Delay of More than 2 Hours&quot;, &quot;&quot;)))</formula>
    <label>Release Delay Category</label>
    <type>Text</type>
</CustomField>