force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release__c/fields/agf__Release_Manager__c.field-meta.xml
<CustomField>
    <fullName>agf__Release_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Release Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Releases</relationshipName>
    <type>Lookup</type>
</CustomField>