force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release__c/validationRules/agf__Application_set_after_In_Development.validationRule-meta.xml
<ValidationRule>
    <fullName>agf__Application_set_after_In_Development</fullName>
    <active>true</active>
    <description>The Application field must be set when the Status is not NULL or &quot;In Development&quot;.</description>
    <errorConditionFormula>ISBLANK( agf__Application__c ) &amp;&amp; NOT(ISPICKVAL(agf__Status__c, &quot;&quot;)) &amp;&amp; NOT(ISPICKVAL(agf__Status__c, &quot;In Development&quot;))</errorConditionFormula>
    <errorDisplayField>agf__Status__c</errorDisplayField>
    <errorMessage>The Application must be set when the Release Status is not In Development</errorMessage>
</ValidationRule>