force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release__c/validationRules/agf__Comma_Separated_Instances.validationRule-meta.xml
<ValidationRule>
    <fullName>agf__Comma_Separated_Instances</fullName>
    <active>false</active>
    <description>Format is: blank, NA1 (one or two digits)  NA1,NA2 or NA1,NA2,...,NA99</description>
    <errorConditionFormula>NOT(REGEX( agf__Deployment_Instances__c , &quot;|^(?:NA|CS|AP|EU|GS|SR)[0-9][0-9]?$|^(?:NA|CS|AP|EU|GS|SR)[0-9][0-9]?((?:,(?:NA|CS|AP|EU|GS|SR)[0-9][0-9]?)+)*,(?:NA|CS|AP|EU|GS|SR)[0-9][0-9]?&quot;))</errorConditionFormula>
    <errorDisplayField>agf__Deployment_Instances__c</errorDisplayField>
    <errorMessage>Instance list must be of the form: NA1,NA2,CS2,...
Use capital letters and no whitespace.
Allowed prefixes are NA, CS, EU, AP, GS or SR only.</errorMessage>
</ValidationRule>