force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release__c/validationRules/agf__End_needed_when_Sched_date_specified.validationRule-meta.xml
<ValidationRule>
    <fullName>agf__End_needed_when_Sched_date_specified</fullName>
    <active>false</active>
    <errorConditionFormula>NOT( ISNULL( agf__Release_Date__c))</errorConditionFormula>
    <errorDisplayField>agf__Scheduled_End_Date__c</errorDisplayField>
    <errorMessage>Scheduled End Date must be set when Scheduled Date is specified.</errorMessage>
</ValidationRule>