force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release__c/validationRules/agf__GS0_Duration_Must_be_14_days_or_less.validationRule-meta.xml
<ValidationRule>
    <fullName>agf__GS0_Duration_Must_be_14_days_or_less</fullName>
    <active>true</active>
    <errorConditionFormula>IF( ISNULL( agf__Planned_GS0_End_Date__c ), false, (DATEVALUE(agf__Planned_GS0_End_Date__c) - DATEVALUE( agf__Planned_GUS_Release_Date__c )) &gt; 14)</errorConditionFormula>
    <errorDisplayField>agf__Planned_GS0_End_Date__c</errorDisplayField>
    <errorMessage>GS0 End date cannot be more than 14 days later than GS0 Release Date.</errorMessage>
</ValidationRule>