force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release__c/validationRules/agf__Release_Duration_Must_be_14_days_or_less.validationRule-meta.xml
<ValidationRule>
    <fullName>agf__Release_Duration_Must_be_14_days_or_less</fullName>
    <active>true</active>
    <errorConditionFormula>IF( ISNULL(agf__Scheduled_End_Date__c), false, (DATEVALUE(agf__Scheduled_End_Date__c)   -  DATEVALUE(agf__Release_Date__c)) &gt; 14)</errorConditionFormula>
    <errorDisplayField>agf__Scheduled_End_Date__c</errorDisplayField>
    <errorMessage>End date cannot be more than 14 days later than Release Date.</errorMessage>
</ValidationRule>