force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release__c/validationRules/agf__Scheduled_Date_Required_if_no_GS0_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>agf__Scheduled_Date_Required_if_no_GS0_Date</fullName>
    <active>true</active>
    <description>Scheduled date is a required field unless a GS0 date has been specified.</description>
    <errorConditionFormula>CONTAINS($Profile.Name,&quot;GUS Release&quot;) &amp;&amp; 
ISNULL( agf__Release_Date__c) &amp;&amp; 
ISNULL( agf__Planned_GUS_Release_Date__c ) &amp;&amp;   
NOT( ISCHANGED( agf__Number_of_Stamps__c ))</errorConditionFormula>
    <errorDisplayField>agf__Release_Date__c</errorDisplayField>
    <errorMessage>Scheduled Release Date must be specified.</errorMessage>
</ValidationRule>