force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release__c/listViews/agf__All.listView-meta.xml
<ListView>
    <fullName>agf__All</fullName>
    <columns>NAME</columns>
    <columns>agf__Number_of_Bugs__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>