force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release__c/listViews/agf__Today.listView-meta.xml
<ListView>
    <fullName>agf__Today</fullName>
    <columns>NAME</columns>
    <columns>agf__Number_of_Bugs__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today</label>
</ListView>